tests/fixtures/fail/inherent_field_method_conflict.sc
let A = struct { reset: i32 }

extend A {
  let reset(borrow self)(): i32 = { self.reset }
}

let main(): i32 = { 0 }
